--- a/container-udemy/index.html
+++ b/container-udemy/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>micro-frontend</title>
+  <title>Micro Frontend</title>
 </head>
 
 <body>
