--- a/container-udemy/index.html
+++ b/container-udemy/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Micro Frontend</title>
+  <link rel="icon" type="image/png" href="favicon.ico">
+
 </head>
 
 <body>
