--- a/products/index.html
+++ b/products/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products</title>
+  <title>Cart</title>
 </head>
 
 <body>
-  <div id="products"></div>
+  <div id="cart"></div>
 </body>
 
 </html>
