--- a/products/public/index.html
+++ b/products/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Cart</title>
   </head>
   <body>
-    <div id="products"></div>
+    <div id="cart"></div>
   </body>
 </html>
