--- a/container-udemy/index.html
+++ b/container-udemy/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Micro Frontend</title>
+  <title>Micro Frontends</title>
   <link rel="icon" type="image/png" href="favicon.ico">
 
 </head>
